Fixed small bugs and updated JS.

--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["ActivePage"] = "Create";
 }
 
-<div class="flex-grow-1 p-4 d-flex flex-column">
+<div class="flex-grow-1 p-4 d-flex flex-column current-page-create">
     <div class="container my-2 sticky-top">
         <div class="card px-5 pt-3 pt-md-0 shadow-sm">
             <div class="row align-items-center">
