--- a/GeneticAlgNetControl/Pages/Dashboard.cshtml
+++ b/GeneticAlgNetControl/Pages/Dashboard.cshtml
@@ -101,8 +101,8 @@
         var statusMessageType = statusMessage.StartsWith("Error") ? "danger" : statusMessage.StartsWith("Success") ? "success" : "info";
         var statusMessageIcon = statusMessage.StartsWith("Error") ? "exclamation" : statusMessage.StartsWith("Success") ? "check" : "info";
         var statusMessageText = string.Join(" ", statusMessage.Split(" ").Skip(1));
-        <div class="container my-2">
-            <div class="alert alert-@statusMessageType alert-dismissible mb-0 shadow-sm">
+        <div class="container">
+            <div class="alert my-2 alert-@statusMessageType alert-dismissible mb-0 shadow-sm">
                 <span><i class="fas fa-@statusMessageIcon-circle"></i></span>
                 <span>@statusMessageText</span>
                 <button type="button" class="close" data-dismiss="alert">
