--- a/GeneticAlgNetControl/Pages/Details.cshtml
+++ b/GeneticAlgNetControl/Pages/Details.cshtml
@@ -249,7 +249,7 @@
         <div class="container my-2">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <div class="chart-js-chart" data-type="details">
+                    <div class="chart-js-chart" data-chart-type="line">
                         <span class="chart-js-data" hidden>@JsonSerializer.Serialize(new { AverageFitness = Model.View.Algorithm.Population.HistoricAverageFitness, BestFitness = Model.View.Algorithm.Population.HistoricBestFitness })</span>
                         <canvas class="chart-js-canvas"></canvas>
                     </div>
@@ -266,7 +266,7 @@
     }
     <div class="container my-2">
         <div class="nav row align-items-center">
-            <a href="#item-details-tab-pane-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link text-dark active" data-toggle="tab" title="Nodes">
+            <a href="#item-details-tab-pane-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link tab-link text-secondary active" data-toggle="tab" title="Nodes">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -281,7 +281,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#item-details-tab-pane-edges" class="col-lg-3 mb-1 mb-xl-0 nav-link text-dark" data-toggle="tab" title="Edges">
+            <a href="#item-details-tab-pane-edges" class="col-lg-3 mb-1 mb-xl-0 nav-link tab-link text-secondary" data-toggle="tab" title="Edges">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -296,7 +296,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#item-details-tab-pane-target-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link text-dark" data-toggle="tab" title="Target nodes">
+            <a href="#item-details-tab-pane-target-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link tab-link text-secondary" data-toggle="tab" title="Target nodes">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -311,7 +311,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#item-details-tab-pane-preferred-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link text-dark" data-toggle="tab" title="Preferred nodes">
+            <a href="#item-details-tab-pane-preferred-nodes" class="col-lg-3 mb-1 mb-xl-0 nav-link tab-link text-secondary" data-toggle="tab" title="Preferred nodes">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <div class="row align-items-center">
@@ -328,95 +328,111 @@
             </a>
         </div>
         <div class="tab-content mt-2">
-            <div id="item-details-tab-pane-nodes" class="tab-pane fade bg-white show active shadow-sm">
-                <table class="table table-striped table-hover table-bordered text-center">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>
-                                <span>Node name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.View.Algorithm.Nodes)
-                        {
-                            <tr>
-                                <td>
-                                    <span>@item</span>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+            <div id="item-details-tab-pane-nodes" class="tab-pane fade show active">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <table class="table table-striped table-hover table-bordered text-center">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>
+                                        <span>Node name</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.View.Algorithm.Nodes)
+                                {
+                                    <tr>
+                                        <td>
+                                            <span>@item</span>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div id="item-details-tab-pane-edges" class="tab-pane fade bg-white">
-                <table class="table table-striped table-hover table-bordered text-center">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>
-                                <span>Source node name</span>
-                            </th>
-                            <th>
-                                <span>Target node name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.View.Algorithm.Edges)
-                        {
-                            <tr>
-                                <td>
-                                    <span>@item.SourceNode</span>
-                                </td>
-                                <td>
-                                    <span>@item.TargetNode</span>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+            <div id="item-details-tab-pane-edges" class="tab-pane fade">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <table class="table table-striped table-hover table-bordered text-center">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>
+                                        <span>Source node name</span>
+                                    </th>
+                                    <th>
+                                        <span>Target node name</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.View.Algorithm.Edges)
+                                {
+                                    <tr>
+                                        <td>
+                                            <span>@item.SourceNode</span>
+                                        </td>
+                                        <td>
+                                            <span>@item.TargetNode</span>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div id="item-details-tab-pane-target-nodes" class="tab-pane fade bg-white">
-                <table class="table table-striped table-hover table-bordered text-center">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>
-                                <span>Node name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.View.Algorithm.TargetNodes)
-                        {
-                            <tr>
-                                <td>
-                                    <span>@item</span>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+            <div id="item-details-tab-pane-target-nodes" class="tab-pane fade">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <table class="table table-striped table-hover table-bordered text-center">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>
+                                        <span>Node name</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.View.Algorithm.TargetNodes)
+                                {
+                                    <tr>
+                                        <td>
+                                            <span>@item</span>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div id="item-details-tab-pane-preferred-nodes" class="tab-pane fade bg-white">
-                <table class="table table-striped table-hover table-bordered text-center">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>
-                                <span>Node name</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.View.Algorithm.PreferredNodes)
-                        {
-                            <tr>
-                                <td>
-                                    <span>@item</span>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
+            <div id="item-details-tab-pane-preferred-nodes" class="tab-pane fade">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <table class="table table-striped table-hover table-bordered text-center">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>
+                                        <span>Node name</span>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.View.Algorithm.PreferredNodes)
+                                {
+                                    <tr>
+                                        <td>
+                                            <span>@item</span>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
