Fixed small bugs and inconsistencies.

--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -29,8 +29,8 @@
         </div>
     </div>
     <form method="post" class="d-flex flex-column">
-        <div class="container my-2">
-            <div asp-validation-summary="ModelOnly" class="alert alert-danger mb-0 shadow-sm"></div>
+        <div class="container">
+            <div asp-validation-summary="ModelOnly" class="my-2 alert alert-danger mb-0 shadow-sm"></div>
         </div>
         <div class="container my-2">
             <div class="card shadow-sm">
