--- a/GeneticAlgNetControl/Pages/Save.cshtml
+++ b/GeneticAlgNetControl/Pages/Save.cshtml
@@ -70,7 +70,7 @@
                                         <span asp-validation-for="Input.Type" class="text-danger small" hidden></span>
                                     </div>
                                     <div class="col-xl-6 pl-xl-1">
-                                        <button type="submit" class="btn btn-block btn-primary text-wrap" title="Download all">
+                                        <button type="submit" class="btn btn-block btn-primary text-wrap" title="Save all">
                                             <span>Save all</span>
                                         </button>
                                     </div>
